--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "downloadjs": "^1.4.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-dropdown": "^1.2.0",
